# Image_processor

./: CMakeLists.txt  image_processor.cpp
BMP_class/: BMP.cpp  BMP.h  BMP_Reader.cpp  BMP_Writer.cpp
Basic filter/: basic.filter.cpp  basic_filter.h
Blur filter/: blur.cpp  blur.h
Crop filter/: crop.cpp  crop.h
Edge Detection filter/: edge_detection.cpp  edge_detection.h
Factory/: factory.cpp  factory.h
Grayscale filter/: grayscale.cpp  grayscale.h
Image/: image.cpp  image.h
Negative filter/: Negative.cpp  Negative.h
Parser/: parser.cpp  parser.h  test_parser.cpp
Ripple filter/: ripple.cpp  ripple.h
Sharpening filter/: sharp.cpp  sharp.h
